--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 	implementation 'org.jcodec:jcodec-javase:0.2.5'
 
 
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'com.github.ben-manes.caffeine:caffeine'
+
 
 	implementation "org.flywaydb:flyway-mysql"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -55,6 +58,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
 	testImplementation 'org.testcontainers:mysql'
 	testImplementation 'org.testcontainers:junit-jupiter'
+
 }
 
 tasks.named('test') {
