--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation group: 'com.mysql', name: 'mysql-connector-j'
 	//implementation 'org.imgscalr:imgscalr-lib:4.2'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
 	implementation 'org.jcodec:jcodec:0.2.5'
 	implementation 'org.jcodec:jcodec-javase:0.2.5'
