--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-elasticsearch
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-elasticsearch', version: '3.4.2'
+
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	//implementation 'javax.xml.bind:jaxb-api:2.3.0'
 
