--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,11 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	//implementation 'javax.xml.bind:jaxb-api:2.3.0'
 
+	//kafka
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.kafka:spring-kafka'
+
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
