--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,12 @@ dependencies {
 	//kafka
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'io.micrometer:micrometer-core'
+	implementation 'io.micrometer:micrometer-registry-prometheus'
+
+
 
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
